force-app/main/default/objects/Profitability_Summary__c/Profitability_Summary__c.object-meta.xml
<CustomObject>
    <label>Profitability Summary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profitability Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>