force-app/main/default/objects/Profitability_Summary__c/fields/High_Level_Margin_Dollars__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Margin_Dollars__c</fullName>
    <formula>Account__r.Year_To_Date_Sales__c - Std_Cost_Accum_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Level Margin $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>