force-app/main/default/objects/Profitability_Summary__c/fields/High_Level_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Margin_Percent__c</fullName>
    <formula>( Account__r.Year_To_Date_Sales__c - Std_Cost_Accum_Total__c ) / Account__r.Year_To_Date_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HIgh Level Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>