force-app/main/default/objects/Profitability_Summary__c/fields/Std_Cost_Accum_Total__c.field-meta.xml
<CustomField>
    <fullName>Std_Cost_Accum_Total__c</fullName>
    <label>STD Cost Accumulated Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>